modifiche richieste completate

--- a/www/home.content.html
+++ b/www/home.content.html
@@ -1,9 +1,9 @@
 <img class="logo" src="img/logo.png" ng-if="mostra_logo"/>
 <div class="bottoni_sotto">
-  <div class="ui divided grid">
-    <div class="sixteen wide column" ui-sref="promozioni" ng-click="">
-      <div class="text-center"><i class="icon-su"></i></div>
-      <div class="text-center">Convenzioni</div>
-    </div>
+    <div class="ui divided grid">
+        <div class="sixteen wide column" ng-click="apriUrl('https://bodiocenter.convenzioniperte.com/login-input.action');">
+            <div class="text-center"><i class="icon-su"></i></div>
+            <div class="text-center">Convenzioni</div>
+        </div>
   </div>
 </div>
