--- a/www/main.html
+++ b/www/main.html
@@ -20,7 +20,7 @@
                 <i class="icon-aiuto sidebar-icon">
                 </i>Numeri utili
             </a>
-            <a class="item toggle_sidebar" ui-sref="promozioni">
+            <a class="item toggle_sidebar" ng-click="apriUrl('https://bodiocenter.convenzioniperte.com/login-input.action');">
                 <i class="icon-food sidebar-icon">
                 </i>Convenzioni
             </a>
