--- a/www/promozioni.content.html
+++ b/www/promozioni.content.html
@@ -1,29 +1,6 @@
 
 <div class="scrollable">
   <div class="ui divided list no-margin-top">
-    <div class="item volantini" ng-if="!!volantini.length" ui-sref="volantiniList" ng-click="">
-      <div class="content">
-        <div class="header">Sfoglia i volantini!</div>
-      </div>
-      <div class="compact ui icon button"><i class="chevron right icon"></i></div>
-    </div>
-    <div class="item" ng-if="!promozioni.length">
-      <div class="content">
-        <div class="header">Nessuna promozione al momento</div>
-      </div>
-    </div>
-    <div class="item" ng-repeat="promozione in ::promozioni|orderBy: 'negozio.nome' " ui-sref="promozioneDetail({id:{{::promozione.id}}})" ng-click="" ng-class="::({totem:promozione.cat_promo=='Solo per totem',solocard:promozione.solo_per_possessori_card})">
-      <div class="ui image"><img data-src="http://app.bodiocenter.com{{::promozione.immagineThumb}}" src="img/loader-mini.gif" ng-if="::promozione.immagineThumb" width="100px"/><img data-src="http://app.bodiocenter.com{{::promozione.negozio.fotoThumb}}" src="img/loader-mini.gif" ng-if="::(!promozione.immagineThumb &amp;&amp; promozione.negozio.fotoThumb)" width="100px"/></div>
-      <div class="content">
-        <div class="header">{{::promozione.negozio.nome}}</div>
-        <div class="small">{{::promozione.data_completa}}</div>
-        <div class="description"> 
-          <p>{{::promozione.nome}}</p>
-          <div class="ui green label" ng-if="::promozione.prenotata"><i class="ui checkmark icon"></i>prenotato</div>
-          <div class="ui red label" ng-if="::promozione.negozio.preferito"><i class="ui star icon"> </i>preferito                    </div>
-        </div>
-      </div>
-      <div class="compact ui icon button"><i class="chevron right icon"></i></div>
-    </div>
+    Caricamento in corso...
   </div>
 </div>
